--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -741,7 +741,7 @@
                 .btn__text
                     color #000
 .content
-    // padding 20px 0 0 0
+    padding-top 20px
     font-size 14px
     line-height 1.6em
     color #121212
@@ -1712,6 +1712,8 @@ ul.list
 
 
 .articles
+    a
+        text-decoration none
     row-flex()
     margin-bottom 30px
     &__item
@@ -3296,3 +3298,117 @@ img.zoom
     text-align center
     margin auto
     display table
+
+
+
+
+.timer
+    margin auto
+    margin-bottom 10px 
+    display table
+    @media (min-width 990px)
+        margin-bottom 0 
+    &__action
+        font-size 16px
+        line-height 1.2em
+        margin 15px 0 10px 0
+        text-align center
+    &__el
+        display inline-block
+        width 50px
+        margin-right 14px
+        // @media (min-width 500px)
+        //     margin-right 15px
+        //     width 74px
+    &__numeral
+        border 2px solid #305aae
+        border-radius 50%
+        positio absolute
+        @media (min-width 600px)
+            line-height 46px
+        //     width 74px
+        //     height 74px
+        //     font-size 45px
+        //     line-height 70px   
+        width 50px
+        height 50px
+        line-height 50px
+        font-size 30px
+        text-align center
+        font-weight 300
+        display inline-block
+    &__text
+        margin-top 10px
+        // @media (min-width 500px)
+        //     font-size 16px
+        font-size 14px
+        line-height 1em
+        text-align center
+
+.table
+    display block
+    // width 100%
+    position relative
+    // overflow-x auto
+    margin 0 -20px
+    border 2px solid #dee2e6
+    border-right none
+    border-radius 4px
+    background #f0f0f0
+    @media (min-width 500px)
+        border 2px solid #dee2e6
+        margin auto 
+    &__wrapper
+        overflow-x auto
+        overflow-y visible
+        margin-left 100px
+        border-left 2px solid #dee2e6
+        background #fff
+        @media (min-width 500px)
+            margin-left 0
+            border none
+    table
+        text-align left
+        width 100%
+        font-size 14px
+        border-collapse separate
+    // tr,
+    // th
+    //     padding 10px
+    //     vertical-align top
+    //     border-top 1px solid #dee2e6
+    th
+    td
+        padding 10px
+        vertical-align top
+        font-weight 500
+        border-top 2px solid #dee2e6
+    td
+        border-right 2px solid #dee2e6
+        @media (min-width 500px)
+            border-right none
+            border-left 2px solid #dee2e6
+    th
+        font-size 12px
+        font-weight 600
+        @media (min-width 500px)
+            font-size 14px
+            font-weight 500
+    thead
+        th
+        td
+            border-top none
+            font-weight 600
+    tbody
+        td
+            min-width 200px
+    th
+        position absolute
+        left 0
+        width 100px
+        @media (min-width 500px)
+            left auto
+            position relative
+            width auto
+            min-width 200px
+
