--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -817,11 +817,14 @@ block content
 
 
 
-                    +b.share
+                    +b.share(data-duration="26540 minutes")
                         .row
                             .col.col_size_12.col_size-md_3.col_size-lg_3
                                 +e.title Акция 
                                 +e.text
+                                    div.share__duration
+                                    br
+                                    div.share__difference
                                     |ча организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
                             .col.col_size_12.col_size-md_4.col_size-lg_5
                                 +e.img
