--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2976,11 +2976,13 @@ img.zoom
         padding 5px 0 5px 30px 
         line-height 1.2em
     &__result
+        height 100%
         //background #eee
         border 2px solid #4273d6
         .query2result__item
             background-image url(../images/i32.png) 
     &__query
+        height 100%
         font-weight 600
         @media (min-width 780px)  
             margin-bottom 5px
@@ -3184,6 +3186,11 @@ img.zoom
         line-height 1.2em
         color #000
         padding 20px 20px 10px 20px 
+    &__duration
+        display inline
+    &__difference
+        display inline
+        font-weight 600
     &__text
         font-size 14px
         line-height 1.4em
@@ -3312,48 +3319,48 @@ img.zoom
 
 
 
-.timer
-    margin auto
-    margin-bottom 10px 
-    display table
-    @media (min-width 990px)
-        margin-bottom 0 
-    &__action
-        font-size 16px
-        line-height 1.2em
-        margin 15px 0 10px 0
-        text-align center
-    &__el
-        display inline-block
-        width 50px
-        margin-right 14px
-        // @media (min-width 500px)
-        //     margin-right 15px
-        //     width 74px
-    &__numeral
-        border 2px solid #305aae
-        border-radius 50%
-        positio absolute
-        @media (min-width 600px)
-            line-height 46px
-        //     width 74px
-        //     height 74px
-        //     font-size 45px
-        //     line-height 70px   
-        width 50px
-        height 50px
-        line-height 50px
-        font-size 30px
-        text-align center
-        font-weight 300
-        display inline-block
-    &__text
-        margin-top 10px
-        // @media (min-width 500px)
-        //     font-size 16px
-        font-size 14px
-        line-height 1em
-        text-align center
+// .timer
+//     margin auto
+//     margin-bottom 10px 
+//     display table
+//     @media (min-width 990px)
+//         margin-bottom 0 
+//     &__action
+//         font-size 16px
+//         line-height 1.2em
+//         margin 15px 0 10px 0
+//         text-align center
+//     &__el
+//         display inline-block
+//         width 50px
+//         margin-right 14px
+//         // @media (min-width 500px)
+//         //     margin-right 15px
+//         //     width 74px
+//     &__numeral
+//         border 2px solid #305aae
+//         border-radius 50%
+//         positio absolute
+//         @media (min-width 600px)
+//             line-height 46px
+//         //     width 74px
+//         //     height 74px
+//         //     font-size 45px
+//         //     line-height 70px   
+//         width 50px
+//         height 50px
+//         line-height 50px
+//         font-size 30px
+//         text-align center
+//         font-weight 300
+//         display inline-block
+//     &__text
+//         margin-top 10px
+//         // @media (min-width 500px)
+//         //     font-size 16px
+//         font-size 14px
+//         line-height 1em
+//         text-align center
 
 .table
     display block
