--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2979,6 +2979,7 @@ img.zoom
         height 100%
         //background #eee
         border 2px solid #4273d6
+        font-weight 600
         .query2result__item
             background-image url(../images/i32.png) 
     &__query
