--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -83,6 +83,8 @@
     //&__menu
 
 .menu
+    a
+        text-decoration none
     background #2b519e
     z-index 120
     display none
@@ -951,6 +953,8 @@ ul.list
         line-height 1.5em
 
 .mobile-menu
+    a
+        text-decoration none
     .arrow
         margin-left 5px
     //padding 20px 0
@@ -1717,6 +1721,7 @@ ul.list
 
 
 .articles
+    margin-top 30px
     a
         text-decoration none
     row-flex()
@@ -2139,7 +2144,7 @@ ul.list
             color #838383
         .checkbox__link
             margin-left 0.08em
-            color #838383
+            color #838383 !important
             font-size 1em
             line-height 1.2em
             display inline
@@ -2993,6 +2998,7 @@ img.zoom
 
 
 .docs
+    padding 0 10px
     &__col
         width 100%
         margin 0
