--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1178,7 +1178,7 @@ ul.list
         color #696969
         line-height 1em
         min-height 1em
-        margin-top 5px
+        padding-top 5px
     &__control
     &__text
         cursor pointer
