--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1134,7 +1134,7 @@ ul.list
         width calc(100% - 20px)
     &__box
         // box-shadow 0 2px 11px -4px rgba(0, 0, 0, 0.2)
-        // background-color #fff
+        background-color #fff
         padding 0.556em 0.5em 0.556em 0.833em
         border 2px solid #d6dcf5
         border-top 0
@@ -1254,6 +1254,7 @@ ul.list
                 background #84aeff
                 border-radius 4px
                 top 1.15em
+                z-index 1
             &:before
                 transform rotate(-130deg)
                 right 0.87em
@@ -3302,7 +3303,7 @@ img.zoom
 .form-horizontal
     width 100% 
     padding 20px 0
-    background #fdfdfd
+    background #f5f7f9
     border-bottom 1px solid #eee
     border-top 1px solid #eee
     box-shadow inset 0 0 6px 0px #e0e0e0
