--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -643,6 +643,7 @@
         align-items center
         justify-content center
         flex-direction column
+        min-height 300px
         height 100%
         @media (min-width 500px)
             align-items flex-start
@@ -669,6 +670,7 @@
     &__btn
         margin-top 30px
 .btn
+    text-decoration none
     font-size 16px
     padding 1em 1.2em
     border-radius 4px
@@ -3223,6 +3225,8 @@ img.zoom
             height 100%
         @media (min-width 900px)
             width auto
+    &__btn
+        margin-top 20px !important
 
 .product
     background #f1f1f1
