--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -670,7 +670,7 @@
     &__btn
         margin-top 30px
 .btn
-    text-decoration none
+    text-decoration none !important
     font-size 16px
     padding 1em 1.2em
     border-radius 4px
