--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -6,7 +6,6 @@
 
 @import '../blocks/**/*'
 
-
 .page
     &__main
         transition all 200ms 0ms
@@ -285,7 +284,6 @@
 //                     visibility visible
 //                     opacity 1
 
-
 .top-menu
     width 100%
     height 100%
@@ -474,7 +472,6 @@
         .top-menu__link
             color #1f1f1f
             font-size 13px
-
   
 .hamburger
     @media (min-width 1160px)
@@ -927,7 +924,6 @@ ul.list
             display flex
             //align-items center
 
-
 .nav
     transition all .8s ease 0s
     background #f7f7f7
@@ -1302,8 +1298,6 @@ ul.list
                 height 0
                 width 0
 
-
-
 .arrow
     position relative
     width 12px
@@ -1597,7 +1591,6 @@ ul.list
         height 45px
         margin 10px 0 10px 30px
 
-
 .deadlines
     margin 80px 0 50px 0
     &__header
@@ -1722,7 +1715,6 @@ ul.list
     .time-wrapper
         grid-area time
 
-
 .articles
     margin-top 30px
     a
@@ -1824,7 +1816,6 @@ ul.list
 .form-box //600px
     // padding 20px
     //background #ddd
-    
     margin 50px 0
     @media (min-width 360px)
         padding 0  10px 
@@ -1889,9 +1880,6 @@ ul.list
         font-weight 400
         margin-bottom 12px
         
-
-
-
 .modal
     position fixed
     left 0
@@ -3334,9 +3322,6 @@ img.zoom-img
     margin auto
     display table
 
-
-
-
 // .timer
 //     margin auto
 //     margin-bottom 10px 
@@ -3447,3 +3432,5 @@ img.zoom-img
             width auto
             min-width 200px
 
+.flex
+    display flex
