--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3435,3 +3435,18 @@ img.zoom-img
 .flex
     display flex
     align-items center
+
+
+.wall
+    padding 25px 0
+    background #2b519e
+    box-shadow inset 0px 4px 20px 0px rgba(0,0,0,0.09)
+    color #fff
+    &__title
+        font-size 22px 
+        @media (min-width 700px)
+            font-size 28px 
+        line-height 1.2em
+        color #fff
+        text-align center
+        margin-bottom 30px
