--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3450,3 +3450,9 @@ img.zoom-img
         color #fff
         text-align center
         margin-bottom 30px
+
+img
+    opacity 1
+    transition opacity 0.35s
+    &[data-src]
+        opacity 0
