--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3488,3 +3488,11 @@ padding($d)
     &_l 
         padding('left')
         
+
+.bg
+    width 100%
+    padding 25px 0
+    background-color #fff
+    background-repeat no-repeat
+    background-position center
+    background-size cover
