--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -645,6 +645,7 @@
         @media (min-width 500px)
             align-items flex-start
     &__title
+        margin 0
         font-size 24px
         line-height 1.2em
         color #fff 
