--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -531,10 +531,10 @@
         @media (min-width 530px)
             display block
         width 100%
-        font-size 16px
+        font-size 14px
         color #2f2f2f
         line-height 1.3em
-        padding-top 14px
+        padding-top 8px
         font-weight 600
 
 .phone
@@ -570,6 +570,7 @@
         font-size 16px
         line-height 1em 
         font-weight 700
+        text-decoration none
         @media (min-width 390px)
             font-size 18px
 .maps
