--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1413,25 +1413,25 @@ ul.list
         color #363636
         text-align left
         position relative
-        @media (min-width 700px)
-            padding 10px 70px 20px 70px 
-            font-size 16px 
-            &:before
-            &:after
-                content ''
-                position absolute
-                width 51px 
-                height 41px
-                background-repeat no-repeat
-                background-size contain
-            &:before
-                background-image url(../images/quote-before.svg)
-                top 0
-                left 0
-            &:after
-                background-image url(../images/quote-after.svg)
-                right 0
-                bottom 0             
+        // @media (min-width 700px)
+        //     padding 10px 70px 20px 70px 
+        //     font-size 16px 
+        //     &:before
+        //     &:after
+        //         content ''
+        //         position absolute
+        //         width 51px 
+        //         height 41px
+        //         background-repeat no-repeat
+        //         background-size contain
+        //     &:before
+        //         background-image url(../images/quote-before.svg)
+        //         top 0
+        //         left 0
+        //     &:after
+        //         background-image url(../images/quote-after.svg)
+        //         right 0
+        //         bottom 0             
 .bx-wrapper
     position relative
 
